# yesab

./: .gitattributes  AGENTS.md  CLAUDE.md  DOLT_REMOTE.md  LICENSE  OPEN-GOVERNMENT-LICENCE-YUKON.txt  README.html  README.md  YESAB_API.md  bacvgcj8phhbimm9cjklp5unriilplif.darc  build_static_map.py  build_static_map_split.py  cache_yesab_api.py  manifest  pyproject.toml  yesab-explorer  yesab-explorer.cmd
.beads/: config.yaml  metadata.json
data/: yesab_all_zip.state.json
data/api/: location_overrides.csv  projects_merged.json.zst  state.json
data/api/buckets/: projects_2005-2005.json.zst  (+11 more)
datasette_plugins/: yesab_yukon_basemap.py
docs/: api-location-fallback-flow.md  project-bundle-downloads.md
journal/: 2026-04-15_yesab_progress_report.html  2026-05-05_yesab_progress_report.html  2026-05-07_yesab_development_cost_report.html  2026-05-07_yesab_development_cost_report.md
metrics/: README.md  agent_sessions.jsonl  command_runs.jsonl  decisions.jsonl
scripts/: build_datasette_explorer.py  build_geopackage.py  build_static_map_single.py  build_static_map_split.py  deploy_to_production.py  download_project_bundle.py  download_project_map_archive.py  log_agent_session.py  refresh_and_build_geopackage.py  refresh_api_cache.py  run_datasette_explorer.py  run_timed.py  summarize_metrics.py
tests/: test_datasette_explorer.py  test_datasette_explorer_runner.py  test_deploy_to_production.py  test_download_project_bundle.py  test_metrics_scripts.py  test_refresh_and_build_geopackage.py  test_refresh_api_cache.py  test_yesab_map_core.py
yesab_map/: core.py
