[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "yesab-map-tools"
version = "0.1.0"
description = "Local YESAB map and Datasette explorer utilities"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"

[project.scripts]
yesab-explorer = "scripts.run_datasette_explorer:main"

[tool.setuptools.packages.find]
include = ["scripts", "yesab_map"]
